--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,6 +8,8 @@ layout: page
 
 <!-- role="list" needed so that `list-style: none` in Safari doesn't remove the list semantics -->
 <ul class="posts-list list-unstyled" role="list">
+  Work in progress
+  <!--
   {% for post in posts %}
   <li class="post-preview">
     <article>
@@ -84,7 +86,7 @@ layout: page
       {% if site.feed_show_tags != false and post.tags.size > 0 %}
       <div class="blog-tags">
         <span>Tags:</span>
-        <!-- role="list" needed so that `list-style: none` in Safari doesn't remove the list semantics -->
+        <div> role="list" needed so that `list-style: none` in Safari doesn't remove the list semantics </div> This was a comment
         <ul class="d-inline list-inline" role="list">
           {% for tag in post.tags %}
           <li class="list-inline-item">
@@ -98,6 +100,7 @@ layout: page
     </article>
   </li>
   {% endfor %}
+  -->
 </ul>
 
 {% if paginator.total_pages > 1 %}
