--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@ layout: page
 
 <!-- role="list" needed so that `list-style: none` in Safari doesn't remove the list semantics -->
 <ul class="posts-list list-unstyled" role="list">
-  Work in progress
+  <p style="font-family: Arial, sans-serif;">Work in progress</p>
   <!--
   {% for post in posts %}
   <li class="post-preview">
