--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@ layout: page
 
 <!-- role="list" needed so that `list-style: none` in Safari doesn't remove the list semantics -->
 <ul class="posts-list list-unstyled" role="list">
-  <p style="font-family: Arial, sans-serif;">Work in progress</p>
+  <p style="font-family: Arial, sans-serif;">I'm currently a graduate student studying Computer Science at University of Southern California with interest in building systems that can perceive and autonomously interact with the world using machine, reinforcement, and multimodal learning.</p>
   <!--
   {% for post in posts %}
   <li class="post-preview">
