--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,6 +10,7 @@ layout: page
 <ul class="posts-list list-unstyled" role="list">
   <p style="font-family: Arial, sans-serif;">I'm currently a graduate student studying Computer Science at University of Southern California. Prior to this, I received my B.S in Cognitive Science from UC San Diego</p>
   <p style="font-family: Arial, sans-serif;">My interests focus on building systems that can perceive and interact with the world on their own using machine learning, reinforcement learning, and multimodal learning. I’m also curious about studying these autonomous agents to better understand human cognition.</p>
+  <p style="font-family: Arial, sans-serif;">Feel free to reach out!</p>
   <!--
   {% for post in posts %}
   <li class="post-preview">
