--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@ layout: page
 
 <!-- role="list" needed so that `list-style: none` in Safari doesn't remove the list semantics -->
 <ul class="posts-list list-unstyled" role="list">
-  <p style="font-family: Arial, sans-serif;">I'm currently a graduate student studying Computer Science at University of Southern California. Prior to this, I received my B.S in Cognitive Science from UC San Diego with specialization in machine learning and neural computation.</p>
+  <p style="font-family: Arial, sans-serif;">I'm currently a graduate student studying Computer Science at University of Southern California. Prior to this, I received my B.S in Cognitive Science with specialization in machine learning and neural computation from UC San Diego.</p>
   <p style="font-family: Arial, sans-serif;">My interests focus on building systems that can perceive and interact with the world autonomously using machine learning, reinforcement learning, and multimodal learning. I’m also curious about studying these autonomous agents to better understand human cognition.</p>
   <p style="font-family: Arial, sans-serif;">Feel free to reach out or check out my GitHub below!</p>
   <!--
