--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@ layout: page
 <ul class="posts-list list-unstyled" role="list">
   <p style="font-family: Arial, sans-serif;">I'm currently a graduate student studying Computer Science at University of Southern California. Prior to this, I received my B.S in Cognitive Science with specialization in machine learning and neural computation from UC San Diego.</p>
   <p style="font-family: Arial, sans-serif;">My interests focus on building systems that can perceive and interact with the world autonomously using machine learning, reinforcement learning, and multimodal learning. I’m also curious about studying these autonomous agents to better understand human cognition.</p>
-  <p style="font-family: Arial, sans-serif;">Feel free to reach out or check out my GitHub below!</p>
+  <p style="font-family: Arial, sans-serif;">Feel free to reach out or visit my GitHub using the links below!</p>
   <!--
   {% for post in posts %}
   <li class="post-preview">
