--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,8 +8,8 @@ layout: page
 
 <!-- role="list" needed so that `list-style: none` in Safari doesn't remove the list semantics -->
 <ul class="posts-list list-unstyled" role="list">
-  <p style="font-family: Arial, sans-serif;">I'm currently a graduate student studying Computer Science at University of Southern California. Prior to this, I received my B.S in Cognitive Science with specialization in machine learning and neural computation from UC San Diego.</p>
-  <p style="font-family: Arial, sans-serif;">My interests focus on building embodied AI that can perceive and interact with the world autonomously using machine learning and multimodal learning. I’m also curious about studying these autonomous agents to better understand human cognition.</p>
+  <p style="font-family: Arial, sans-serif;">I'm currently a graduate student studying Computer Science at University of Southern California. Prior to this, I earned my B.S in Cognitive Science with specialization in machine learning and neural computation from UC San Diego.</p>
+  <p style="font-family: Arial, sans-serif;">My interests focus on building embodied AI systems that can perceive and interact with the world autonomously using machine learning and multimodal learning. I’m also interested in studying these agents to explore questions about human cognition.</p>
   <p style="font-family: Arial, sans-serif;">Feel free to reach out or visit my GitHub below!</p>
   <!--
   {% for post in posts %}
